# Multi_DOC_rag

./: app.py  main.py  pyproject.toml
Frontend/rag_app/: package-lock.json  package.json
Frontend/rag_app/src/app/: page.tsx
Frontend/rag_app/src/app/api/stream/: route.ts
