[tool.poetry]
name = "multi-doc-rag"
version = "0.1.0"
description = ""
authors = ["ArsalanAyaz <henrykoff7788@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
langchain = "^0.3.1"
langchain-community = "^0.3.1"
langchain-google-genai = "^2.0.0"
langchain-huggingface = "^0.1.0"
qdrant-client = "^1.11.3"
langchain-qdrant = "^0.1.4"
pypdf = "^5.0.0"
openai = "^1.50.0"
transformers = "^4.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
